@startuml Maintly_CMMS_Database

' ============================================
' LAYOUT - kierunek i spacing
' ============================================
skinparam nodesep 120
skinparam ranksep 120

' ============================================
' STYLING - profesjonalny wygląd
' ============================================
skinparam linetype ortho
skinparam backgroundColor #F8F9FA
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #2C3E50
skinparam classBorderThickness 2
skinparam arrowColor #34495E
skinparam arrowThickness 1.5
skinparam shadowing false
skinparam roundcorner 5
skinparam packageStyle rectangle

' Kolorowanie modułów
skinparam class {
  BackgroundColor<<user>> #E8F5E9
  BackgroundColor<<equipment>> #E3F2FD
  BackgroundColor<<workorder>> #FFF3E0
  BackgroundColor<<system>> #F3E5F5
  BorderColor<<user>> #4CAF50
  BorderColor<<equipment>> #2196F3
  BorderColor<<workorder>> #FF9800
  BorderColor<<system>> #9C27B0
}

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <b><color:red>PK:</color> x</b>
!define foreign_key(x) <color:blue>FK:</color> x
hide methods
hide stereotypes

' ============================================
' USER MANAGEMENT - 👥 Module
' ============================================
package "USER MANAGEMENT" #E8F5E9 {
  table(user_roles) <<user>> {
    primary_key(id): int
    --
    name: varchar(50) <<unique>>
  }

  table(users) <<user>> {
    primary_key(id): int
    --
    email: varchar(180) <<unique>>
    password: varchar(255)
    first_name: varchar(100)
    last_name: varchar(100)
    phone: varchar(20) <<nullable>>
    is_active: boolean = true
    last_login_at: datetime <<nullable>>
    created_at: datetime
    --
    foreign_key(user_role_id): int
  }

  users }o--|| user_roles
}

' ============================================
' EQUIPMENT MODULE - 🔧 Module
' ============================================
package "EQUIPMENT MANAGEMENT" #E3F2FD {
  table(equipment) <<equipment>> {
    primary_key(id): int
    --
    name: varchar(255)
    cost_center: int
    qr_code_data: varchar(255) <<unique>> <<nullable>>
    direct_work_time: int = 0
    total_work_time: int = 0
    created_at: datetime
    updated_at: datetime <<nullable>>
    deleted_at: datetime <<nullable>>
    --
    foreign_key(parent_equipment_id): int <<nullable>>
    foreign_key(created_by): int
    foreign_key(updated_by): int <<nullable>>
  }

  equipment }o--o| equipment
  equipment }o--|| users
  equipment }o--o| users

  table(tag_groups) <<equipment>> {
    primary_key(id): int
    --
    name: varchar(100) <<unique>>
    is_required: boolean = false
    is_single_choice: boolean = false
    display_order: int = 0
    created_at: datetime
  }

  table(tags) <<equipment>> {
    primary_key(id): int
    --
    name: varchar(100) <<unique>>
    color: varchar(7) <<nullable>>
    created_at: datetime
    --
    foreign_key(tag_group_id): int <<nullable>>
  }

  tags }o--o| tag_groups

  table(equipment_tags) <<equipment>> {
    primary_key(id): int
    --
    assigned_at: datetime
    --
    foreign_key(equipment_id): int
    foreign_key(tag_id): int
    foreign_key(assigned_by): int
  }

  equipment ||--o{ equipment_tags
  tags ||--o{ equipment_tags
  users ||--o{ equipment_tags

  table(equipment_custom_fields) <<equipment>> {
    primary_key(id): int
    --
    field_name: varchar(100) <<unique>>
    field_type: varchar(20)
    field_options: json <<nullable>>
    is_required: boolean = false
    default_value: text <<nullable>>
    display_order: int = 0
    is_active: boolean = true
    created_at: datetime
    deleted_at: datetime <<nullable>>
    --
    foreign_key(created_by): int
  }

  equipment_custom_fields }o--|| users

  table(equipment_custom_values) <<equipment>> {
    primary_key(id): int
    --
    value: text <<nullable>>
    created_at: datetime
    updated_at: datetime <<nullable>>
    --
    foreign_key(equipment_id): int
    foreign_key(custom_field_id): int
  }

  equipment ||--o{ equipment_custom_values
  equipment_custom_fields ||--o{ equipment_custom_values

  table(equipment_files) <<equipment>> {
    primary_key(id): int
    --
    file_name: varchar(255)
    file_type: varchar(50)
    file_size: bigint <<nullable>>
    description: text <<nullable>>
    uploaded_at: datetime
    deleted_at: datetime <<nullable>>
    --
    foreign_key(equipment_id): int
    foreign_key(uploaded_by): int
  }

  equipment ||--o{ equipment_files
  users ||--o{ equipment_files
}

' ============================================
' WORK ORDER MODULE - 📋 Module
' ============================================
package "WORK ORDER MANAGEMENT" #FFF3E0 {
  table(work_order_statuses) <<workorder>> {
    primary_key(id): int
    --
    name: varchar(50) <<unique>>
    color: varchar(7) <<nullable>>
    display_order: int = 0
    is_final: boolean = false
    created_at: datetime
  }

  table(work_order_priorities) <<workorder>> {
    primary_key(id): int
    --
    name: varchar(50) <<unique>>
    color: varchar(7) <<nullable>>
    display_order: int = 0
    created_at: datetime
  }

  table(work_orders) <<workorder>> {
    primary_key(id): int
    --
    unique_code: varchar(20) <<unique>> <<nullable>>
    title: varchar(255)
    description: text
    planned_start_date: datetime <<nullable>>
    planned_end_date: datetime <<nullable>>
    actual_start_date: datetime <<nullable>>
    actual_end_date: datetime <<nullable>>
    created_at: datetime
    updated_at: datetime <<nullable>>
    deleted_at: datetime <<nullable>>
    --
    foreign_key(status_id): int
    foreign_key(priority_id): int
    foreign_key(equipment_id): int
    foreign_key(created_by): int
    foreign_key(updated_by): int <<nullable>>
  }

  work_orders }o--|| work_order_statuses
  work_orders }o--|| work_order_priorities
  work_orders }o--|| equipment
  work_orders }o--|| users
  work_orders }o--o| users

  table(work_order_assignments) <<workorder>> {
    primary_key(id): int
    --
    assigned_at: datetime
    --
    foreign_key(work_order_id): int
    foreign_key(user_id): int
    foreign_key(assigned_by): int
  }

  work_orders ||--o{ work_order_assignments
  users ||--o{ work_order_assignments
  users ||--o{ work_order_assignments

  table(work_order_tags) <<workorder>> {
    primary_key(id): int
    --
    assigned_at: datetime
    --
    foreign_key(work_order_id): int
    foreign_key(tag_id): int
    foreign_key(assigned_by): int
  }

  work_orders ||--o{ work_order_tags
  tags ||--o{ work_order_tags
  users ||--o{ work_order_tags

  table(work_order_activities) <<workorder>> {
    primary_key(id): int
    --
    description: text
    time_spent: int <<nullable>>
    completed_at: datetime <<nullable>>
    created_at: datetime
    updated_at: datetime <<nullable>>
    deleted_at: datetime <<nullable>>
    --
    foreign_key(work_order_id): int
    foreign_key(performed_by): int
    foreign_key(created_by): int
  }

  work_orders ||--o{ work_order_activities
  users ||--o{ work_order_activities
  users ||--o{ work_order_activities

  table(work_order_files) <<workorder>> {
    primary_key(id): int
    --
    file_name: varchar(255)
    file_type: varchar(50)
    file_size: bigint <<nullable>>
    description: text <<nullable>>
    uploaded_at: datetime
    deleted_at: datetime <<nullable>>
    --
    foreign_key(work_order_id): int
    foreign_key(uploaded_by): int
  }

  work_orders ||--o{ work_order_files
  users ||--o{ work_order_files
}

' ============================================
' SYSTEM MODULE - 🌐 Module
' ============================================
package "SYSTEM" #F3E5F5 {
  table(translations) <<system>> {
    primary_key(id): int
    --
    message_key: varchar(255)
    locale: varchar(5)
    text: text
  }

  table(audit_logs) <<system>> {
    primary_key(id): int
    --
    action: varchar(100)
    entity_type: varchar(100) <<nullable>>
    entity_id: int <<nullable>>
    changes: json <<nullable>>
    metadata: json <<nullable>>
    ip_address: varchar(45) <<nullable>>
    user_agent: varchar(255) <<nullable>>
    created_at: datetime
    --
    foreign_key(user_id): int <<nullable>>
  }

  audit_logs }o--o| users

  table(reports) <<system>> {
    primary_key(id): int
    --
    report_type: varchar(50)
    format: varchar(20)
    filters: json
    status: varchar(20) = 'pending'
    file_name: varchar(255) <<nullable>>
    error_message: text <<nullable>>
    created_at: datetime
    completed_at: datetime <<nullable>>
    --
    foreign_key(user_id): int
  }

  reports }o--|| users

  table(notifications) <<system>> {
    primary_key(id): int
    --
    type: varchar(50)
    title: varchar(255)
    message: text <<nullable>>
    data: json <<nullable>>
    is_read: boolean = false
    created_at: datetime
    read_at: datetime <<nullable>>
    --
    foreign_key(user_id): int
  }

  notifications }o--|| users
}

' ============================================
' LEGEND
' ============================================
legend right
  **MAINTLY CMMS - Database Schema**
  ====
  **20 Tables** | **3NF Normalized**
  ----
  <color:#4CAF50>■</color> User Management (2 tables)
  <color:#2196F3>■</color> Equipment Management (7 tables)
  <color:#FF9800>■</color> Work Order Management (8 tables)
  <color:#9C27B0>■</color> System (3 tables)
  ====
  Framework: Symfony 7 + Doctrine ORM
  Database: MySQL 8.4
endlegend

@enduml
